ZODBUserManager plugin:  allow unicode arguments to 'enumerateUsers'.
o See https://bugs.launchpad.net/zope-pas/+bug/189627o

Prep 1.5.3 release.

--- a/Products/PluggableAuthService/doc/CHANGES.txt
+++ b/Products/PluggableAuthService/doc/CHANGES.txt
@@ -1,5 +1,12 @@
 PluggableAuthService changelog
 
+  PluggableAuthService 1.5.3 (2008/02/06)
+
+    Bugs Fixed
+
+      - ZODBUserManager plugin:  allow unicode arguments to 'enumerateUsers'.
+        (https://bugs.launchpad.net/zope-pas/+bug/189627)
+
   PluggableAuthService 1.5.2.1 (2007/12/07)
 
     Bugs Fixed
