--- a/Products/PluggableAuthService/doc/CHANGES.txt
+++ b/Products/PluggableAuthService/doc/CHANGES.txt
@@ -1,5 +1,13 @@
 PluggableAuthService changelog
 
+  PluggableAuthService 1.5.4 (Unreleased)
+
+    Bugs Fixed
+
+      - Ensure ZODBRoleManagerExportImport doesn't fail if it tries to add a
+        role that already exists (idempotence is desirable in GS importers)
+
+
   PluggableAuthService 1.5.3 (2008/02/06)
 
     Bugs Fixed
