Launchpad #15569586:  docstring fix.

--- a/Products/PluggableAuthService/doc/CHANGES.txt
+++ b/Products/PluggableAuthService/doc/CHANGES.txt
@@ -4,6 +4,8 @@ PluggableAuthService changelog
 PluggableAuthService 1.5.4 (Unreleased)
 ---------------------------------------
 
+- Launchpad #15569586:  docstring fix.
+
 - Ensure ZODBRoleManagerExportImport doesn't fail if it tries to add a
   role that already exists (idempotence is desirable in GS importers)
 
