--- a/Products/PluggableAuthService/doc/CHANGES.txt
+++ b/Products/PluggableAuthService/doc/CHANGES.txt
@@ -4,6 +4,9 @@ PluggableAuthService changelog
 PluggableAuthService 1.5.4 (Unreleased)
 ---------------------------------------
 
+- Ensure the _findUser cache is invalidated if the roles or groups for
+  a principal change.
+
 - Launchpad #15569586:  docstring fix.
 
 - Ensure ZODBRoleManagerExportImport doesn't fail if it tries to add a
