--- a/Products/PluggableAuthService/doc/CHANGES.txt
+++ b/Products/PluggableAuthService/doc/CHANGES.txt
@@ -4,6 +4,8 @@ PluggableAuthService changelog
 PluggableAuthService 1.5.5 (unreleased)
 ---------------------------------------
 
+- Fixed broken markup.
+
 - Don't fail on users defined in multiple user sources on the ZODBGroupManager
   listing page.
 
