--- a/Products/PluggableAuthService/doc/CHANGES.txt
+++ b/Products/PluggableAuthService/doc/CHANGES.txt
@@ -4,6 +4,9 @@ PluggableAuthService changelog
 PluggableAuthService 1.6.2 (unreleased)
 ---------------------------------------
 
+- Fixed test setup for tests using page templates relying on the
+  DefaultTraversable adapter.
+
 - Fixed broken markup.
 
 PluggableAuthService 1.6.1 (2008-11-20)
